change to title to MG wallet

--- a/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
+++ b/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
@@ -207,5 +207,5 @@
 </style>
 
 <ng-container *cdkPortal>
-  <h5 class="text-2xl font-semibold">Ecu Wallet</h5>
+  <h5 class="text-2xl font-semibold">MG Wallet</h5>
 </ng-container>
