--- a/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
+++ b/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
@@ -21,7 +21,7 @@
       <span class="material-icons mr-3 text-gray-500"
         >account_balance_wallet</span
       >
-      ECU Wallet
+      MG Wallet
     </a>
 
     <a
