--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -2,6 +2,12 @@
 
 @use "tailwindcss";
 
+@theme {
+//  --color-primary: #1d4ed8;
+//   --color-accent-700: #9333ea;
+}
+
+
 html,
 body {
   height: 100%;
