--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,10 +3,10 @@
 @use "tailwindcss";
 
 @theme {
-//  --color-primary: #1d4ed8;
-//   --color-accent-700: #9333ea;
+  --color-primary: #0a54ff;
+  --color-accent: #0fc3fa;
+  --color-accent-700: #008ab8;
 }
-
 
 html,
 body {
