--- a/frontend/src/projects/app/container/auth/auth-form/auth-form.component.html
+++ b/frontend/src/projects/app/container/auth/auth-form/auth-form.component.html
@@ -1,17 +1,19 @@
-
-@if(!hasForgottenPassword) {
-
-    <div class="flex flex-col gap-4 justify-center items-center mb-8">
-        <div class="bg-gray-100  darK:bg-gray-800 rounded-full w-32 h-32 flex items-center justify-center">
-
-           <mat-icon class="scale-[3.0]" fontSet="material-symbols-outlined"
-        >private_connectivity</mat-icon
-      >
-        </div>
-
+@if (!hasForgottenPassword) {
+  <div class="flex flex-col gap-4 justify-center items-center mb-8">
+    <div
+      class="bg-gray-100 rounded-full w-32 h-32 flex items-center justify-center"
+    >
+      <mat-icon class="scale-[3.0]">private_connectivity</mat-icon>
     </div>
 
+    <div class="text-center w-10/12">
+      <h4>
+        Sign in to <span class="font-bold">NivJenz</span> to continue
 
-}@else {
-
-}
+        <span class="font-bold"
+          >{{ extraRouteData()?.name }} Authentication</span
+        >
+      </h4>
+    </div>
+  </div>
+} @else {}
