--- a/frontend/src/projects/app/components/password-field/password-field.component.html
+++ b/frontend/src/projects/app/components/password-field/password-field.component.html
@@ -18,9 +18,14 @@
     #password="ngModel"
   />
 
-  @if(error && password.touched) {
+  @if(error['errors'] && password.touched) {
     <mat-error>
-        <span> {{ error | formError: label }}</span>
+        <span> {{ error['errors'] | formError: label }}</span>
     </mat-error>
   }
+
+  @if (mismatch && password.touched) {
+    <mat-error>Passwords do not match</mat-error>
+  }
+
 </mat-form-field>
