--- a/frontend/src/projects/app/container/auth/auth.component.html
+++ b/frontend/src/projects/app/container/auth/auth.component.html
@@ -1,11 +1,11 @@
 <div
-  class="overflow-scroll @container h-full bg-gradient-to-tl from-50% from-primary to-accent-700 to-100%"
+  class="@container h-full bg-gradient-to-tl from-50% from-primary to-accent-700 to-100%"
 >
   <div class="h-full flex flex-col @3xl:flex-row">
     <div
       class="grow flex flex-col gap-16 max-w-8xl grow mx-auto items-center justify-center p-8"
     >
-      <h1 class="@3xl:hidden text-white text-5xl text-center">NivJenz</h1>
+      <!-- <h1 class="@3xl:hidden text-white text-5xl text-center">NivJenz</h1> -->
 
       <img
         src="logo/transparent-logo.png"
@@ -16,10 +16,10 @@
       />
     </div>
     <div
-      class="@3xl:max-w-lg @3xl:min-w-[360px] bg-white flex flex-col gap-4 p-8 justify-center"
+      class="@3xl:max-w-lg @3xl:min-w-[490px] bg-white flex flex-col gap-4 p-8 justify-center"
     >
       <h1
-        class="hidden @3xl:block font-activedealer text-primary dark:text-white text-5xl text-center"
+        class="hidden @3xl:block text-primary text-5xl text-center"
       >
         NivJenz
       </h1>
