--- a/frontend/src/projects/app/container/auth/auth-form/auth-form.component.html
+++ b/frontend/src/projects/app/container/auth/auth-form/auth-form.component.html
@@ -1,5 +1,6 @@
 @if (!hasForgottenPassword) {
-  <div class="flex flex-col gap-4 justify-center items-center mb-8">
+  @if(extraRouteData()) {
+     <div class="flex flex-col gap-4 justify-center items-center mb-8">
     <div
       class="bg-gray-100 rounded-full w-32 h-32 flex items-center justify-center"
     >
@@ -16,4 +17,25 @@
       </h4>
     </div>
   </div>
-} @else {}
+  }
+
+  @if(!showSignUp) {
+    <app-login
+      [input]="inputSignIn"
+      (forgotPassword)="switchToForgotPassword(inputSignIn.email)"
+      (signUp)="switchToSignup($event)"
+      (submit)="submitSignIn($event)"
+    >
+    </app-login>
+  }@else {
+    <app-sign-up
+      [signUpInput]="inputSignUp"
+      (signIn)="switchToSignIn($event)"
+      (submit)="submitSignUp($event)"
+    >
+    </app-sign-up>
+  }
+
+} @else {
+  <!-- show forgot password here -->
+}
