global add wallet btn

--- a/frontend/src/projects/app/container/geonology/geonology.component.html
+++ b/frontend/src/projects/app/container/geonology/geonology.component.html
@@ -15,5 +15,8 @@
 </div>
 
 <ng-container *cdkPortal>
-  <h5 class="text-2xl font-semibold">Geonology</h5>
+  <div class="flex gap-4 items-center">
+    <app-add-wallet-button></app-add-wallet-button>
+    <h5 class="text-2xl font-semibold">Geonology</h5>
+  </div>
 </ng-container>
