--- a/frontend/src/projects/app/container/dashboard/dashboard.component.html
+++ b/frontend/src/projects/app/container/dashboard/dashboard.component.html
@@ -7,5 +7,11 @@
 </div>
 
 <ng-container *cdkPortal>
-  <h5 class="text-2xl font-semibold">Dashboard</h5>
+  <div class="flex gap-4 items-center">
+    <app-add-wallet-button></app-add-wallet-button>
+    <span class="underline text-xl decoration-primary">
+      {{ getTitleBasedOnTime() }},
+      {{ currentUser.firstName }}
+    </span>
+  </div>
 </ng-container>
