--- a/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
+++ b/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
@@ -207,5 +207,8 @@
 </style>
 
 <ng-container *cdkPortal>
-  <h5 class="text-2xl font-semibold">MG Wallet</h5>
+  <div class="flex gap-4 items-center">
+    <app-add-wallet-button></app-add-wallet-button>
+    <h5 class="text-2xl font-semibold">MG Wallet</h5>
+  </div>
 </ng-container>
