--- a/frontend/src/projects/app/container/unilevel/unilevel.component.html
+++ b/frontend/src/projects/app/container/unilevel/unilevel.component.html
@@ -121,5 +121,8 @@
 </div>
 
 <ng-container *cdkPortal>
-  <h5 class="text-2xl font-semibold">Unilevel</h5>
+  <div class="flex gap-4 items-center">
+    <app-add-wallet-button></app-add-wallet-button>
+    <h5 class="text-2xl font-semibold">Unilevel</h5>
+  </div>
 </ng-container>
