--- a/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
+++ b/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
@@ -18,9 +18,7 @@
       routerLinkActive="bg-blue-100 text-blue-600"
       class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50 rounded-md"
     >
-      <span class="material-icons mr-3 text-gray-500"
-        >account_balance_wallet</span
-      >
+      <span class="material-icons mr-3 text-gray-500">account_balance_wallet</span>
       MG Wallet
     </a>
 
@@ -41,15 +39,14 @@
       <span class="material-icons mr-3 text-gray-500">map</span>
       Geonology
     </a>
-  </nav>
 
-  <!-- <div class="border-t mt-auto">
-    <button
-      (click)="toggleSidenav.emit()"
-      class="flex items-center w-full px-4 py-2 text-gray-700 hover:bg-blue-50"
-    >
-      <span class="material-icons mr-3">arrow_back</span>
-      Collapse Menu
-    </button>
-  </div> -->
+      <a
+        routerLink="/leadership-support"
+        routerLinkActive="bg-blue-100 text-blue-600"
+        class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50 rounded-md"
+      >
+        <span class="material-icons mr-3 text-gray-500">supervisor_account</span>
+        Leadership Support
+      </a>
+  </nav>
 </div>
