--- a/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
+++ b/frontend/src/projects/app/container/ecu-wallet/ecu-wallet.component.html
@@ -5,42 +5,23 @@
     class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
   >
     <h2 class="text-2xl font-bold text-gray-800">339.18 PHP</h2>
-    <p class="text-gray-500 text-sm mt-1">All USID Balance</p>
-  </div>
-
-  <div
-    class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
-  >
-    <h2 class="text-2xl font-bold text-gray-800">54.54 PHP</h2>
-    <p class="text-gray-500 text-sm mt-1">FA049950 Balance</p>
+    <p class="text-gray-500 text-sm mt-1">PHP Balance</p>
   </div>
 
   <div
     class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
   >
     <h2 class="text-2xl font-bold text-gray-800">145.00 PHP</h2>
-    <p class="text-gray-500 text-sm mt-1">EC Wallet</p>
+    <p class="text-gray-500 text-sm mt-1">MG Wallet</p>
   </div>
 
-  <div
-    class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
-  >
-    <h2 class="text-2xl font-bold text-gray-800">0.00 PHP</h2>
-    <p class="text-gray-500 text-sm mt-1">MG Pay</p>
-  </div>
+
 
   <div
     class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
   >
     <h2 class="text-2xl font-bold text-gray-800">0</h2>
     <p class="text-gray-500 text-sm mt-1">Travel GC</p>
-  </div>
-
-  <div
-    class="p-6 bg-white rounded-2xl border shadow-sm hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1 hover:scale-[1.02]"
-  >
-    <h2 class="text-2xl font-bold text-gray-800">0</h2>
-    <p class="text-gray-500 text-sm mt-1">Product GC</p>
   </div>
 </div>
 
