--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -3,9 +3,15 @@
 @use "tailwindcss";
 
 @theme {
+  // --color-primary: #0a54ff;
+  // --color-accent: #0fc3fa;
+  // --color-accent-700: #008ab8;
+  --color-primary-50: #ebf1ff;
   --color-primary: #0a54ff;
   --color-accent: #0fc3fa;
-  --color-accent-700: #008ab8;
+  --color-green-500: #2edc87;
+  --color-alert: #ff0000;
+  --color-warning: #ffd23f;
 }
 
 html,
