--- a/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
+++ b/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
@@ -18,7 +18,9 @@
       routerLinkActive="bg-blue-100 text-blue-600"
       class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50 rounded-md"
     >
-      <span class="material-icons mr-3 text-gray-500">account_balance_wallet</span>
+      <span class="material-icons mr-3 text-gray-500"
+        >account_balance_wallet</span
+      >
       MG Wallet
     </a>
 
@@ -32,7 +34,7 @@
     </a>
 
     <a
-      routerLink="/geonology"
+      [routerLink]="['/geonology', userId()]"
       routerLinkActive="bg-blue-100 text-blue-600"
       class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50 rounded-md"
     >
@@ -40,13 +42,13 @@
       Geonology
     </a>
 
-      <a
-        routerLink="/leadership-support"
-        routerLinkActive="bg-blue-100 text-blue-600"
-        class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50 rounded-md"
-      >
-        <span class="material-icons mr-3 text-gray-500">supervisor_account</span>
-        Leadership Support
-      </a>
+    <a
+      routerLink="/leadership-support"
+      routerLinkActive="bg-blue-100 text-blue-600"
+      class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50 rounded-md"
+    >
+      <span class="material-icons mr-3 text-gray-500">supervisor_account</span>
+      Leadership Support
+    </a>
   </nav>
 </div>
