this is my changes

--- a/frontend/src/projects/app/container/geonology/geonology.component.html
+++ b/frontend/src/projects/app/container/geonology/geonology.component.html
@@ -17,6 +17,6 @@
 
 <ng-container *cdkPortal>
   <div class="flex gap-4 items-center">
-    <h5 class="text-2xl font-semibold">Geonology</h5>
+    <h5 class="text-2xl font-semibold">Genealogy</h5>
   </div>
 </ng-container>
