--- a/frontend/src/projects/app/components/add-member-modal/add-member-modal.component.html
+++ b/frontend/src/projects/app/components/add-member-modal/add-member-modal.component.html
@@ -56,7 +56,7 @@
           <input
             required
             matInput
-            placeholder="John"
+            placeholder=""
             required
             name="firstName"
             id="firstName"
@@ -77,7 +77,7 @@
           <mat-label>Last Name</mat-label>
           <input
             matInput
-            placeholder="Doe"
+            placeholder=""
             required
             name="lastName"
             id="lastName"
@@ -107,7 +107,7 @@
         <mat-label>Username</mat-label>
         <input
           matInput
-          placeholder="johndoe123"
+          placeholder=""
           minlength="3"
           required
           name="userName"
