--- a/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
+++ b/frontend/src/projects/app/components/app-sys-sidenav/app-sys-sidenav.component.html
@@ -39,7 +39,7 @@
       class="flex items-center px-4 py-2 text-gray-700 hover:bg-blue-50 rounded-md"
     >
       <span class="material-icons mr-3 text-gray-500">map</span>
-      Geonology
+      Genealogy
     </a>
 
     <a
